# obenchmark

./: Cargo.toml
.github/workflows/: rust-build.yml
src/: main.rs
src/app/: hw_check.rs  mod.rs  theme.rs  ui.rs
src/benchmarks/: cpu.rs  disk.rs  memory.rs
src/engines/: runner.rs  score.rs
src/model/: result.rs
src/platform/windows/: diskinfo_win.rs
src/util/: sysinfo.rs
