[package]
name = "obenchmark"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Open-source benchmark tool"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["wgpu", "x11", "wayland"] 
egui = "0.27"
egui_plot = "0.27"
rayon = "1.8"
sysinfo = "0.30"
anyhow = "1.0"
crossbeam-channel = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
num_cpus = "1.0"
flate2 = "1.0"
sha2 = "0.10"
rand = "0.8"
