[package]
name = "obenchmark"
version = "0.3.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }
iced_tiny_skia = "0.12"

chrono = "0.4"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.30", features = ["multithread"] }
rayon = "1.8"
anyhow = "1.0"
dirs = "5.0"
num_cpus = "1.0"
flate2 = "1.0"
sha2 = "0.10"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
wmi = "0.18.3"